--- a/TaskLogSystem/Views/Home/Index.cshtml
+++ b/TaskLogSystem/Views/Home/Index.cshtml
@@ -89,7 +89,7 @@ else
                  role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h3 class="modal-title" id="taskDetails">Task Details</h3>
+                        <h3 class="modal-title" id="taskDetails">Employee Details</h3>
                         <button type="button"
                                 class="btn-close"
                                 data-bs-dismiss="modal"
