--- a/TaskLogSystem/Views/Shared/_EmployeeForm.cshtml
+++ b/TaskLogSystem/Views/Shared/_EmployeeForm.cshtml
@@ -93,7 +93,7 @@
                 <select class="form-select" id="ReportingPerson" name="ReportingPerson">
                     @{
 
-                        var reportingPersons = Model.EmployeeID == 0 ? new SelectList(_dbContext.Employees.Where(e => e.DepartmentID < 3 && !e.IsDeleted), "EmployeeID", "FirstName") : new SelectList(_dbContext.Employees.Where(e => e.DepartmentID < Model.DepartmentID || e.EmployeeID == Model.ReportingPerson), "EmployeeID", "FirstName");
+                        var reportingPersons = Model.EmployeeID == 0 ? new SelectList(_dbContext.Employees.Where(e => e.DepartmentID < 3 && !e.IsDeleted), "EmployeeID", "FirstName") : new SelectList(_dbContext.Employees.Where(e => (e.DepartmentID < Model.DepartmentID || e.EmployeeID == Model.ReportingPerson) && !e.IsDeleted), "EmployeeID", "FirstName");
                         foreach (var d in reportingPersons)
                         {
                             <option value="@d.Value" @(Convert.ToInt32(d.Value) == Model.ReportingPerson ? "selected" : "")>@d.Text</option>
